--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   url_launcher: ^6.1.5
   # outros
   validatorless: ^1.2.1
+  uuid: ^3.0.6
   # pdf
   pdf: ^3.8.2
   printing: ^5.9.2
