--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # outros
   validatorless: ^1.2.1
   uuid: ^3.0.6
+  flutter_simple_treeview: ^3.0.1
+
   # pdf
   pdf: ^3.8.2
   printing: ^5.9.2
@@ -42,3 +44,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/catclass/
